--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
               </div>
 
               <div>
-                <a href="#" class="text-gray-400 transition duration-100 hover:text-white active:text-indigo-600">DRN Software</a>
+                <a href="#" class="text-gray-400 transition duration-100 hover:text-white active:text-indigo-600">DRN Networks</a>
               </div>
 
               <div>
