--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
     <div class="list-wrap">
     <ul class="list" data-search-on-list="list">
       <li class="list-item" data-search-on-list="list-item">
-        <a href="en.html" class="list-item-link">English<span class="item-list-subtext">US</span></a>
+        <a href="en/" class="list-item-link">English<span class="item-list-subtext">US</span></a>
       </li>
       <li class="list-item" data-search-on-list="list-item">
-        <a href="fr-fr.html" class="list-item-link">Français<span class="item-list-subtext">France</span></a>
+        <a href="fr-fr/" class="list-item-link">Français<span class="item-list-subtext">France</span></a>
       </li>
     </ul>
     </div>
