--- a/fr-fr/index.html
+++ b/fr-fr/index.html
@@ -89,7 +89,7 @@
           <div class="flex flex-col overflow-hidden rounded-[24px] bg-gray-900 sm:flex-row md:h-80">
             <!-- content - start -->
             <div class="flex w-full flex-col p-4 sm:w-1/2 sm:p-8 lg:w-2/5">
-              <h2 class="mb-4 text-xl font-bold text-white md:text-2xl lg:text-4xl">Dites Bonjour à<br/>doReNew</h2>
+              <h2 class="mb-4 text-xl font-bold text-white md:text-2xl lg:text-4xl">Dites bonjour à<br/>doReNew</h2>
 
               <p class="mb-8 max-w-md text-gray-400">Mon objectif est de rendre la tech plus simple. Tout cela commence par la création de mon plus gros projet:<br>doReNew (DRN)</p>
 
@@ -170,7 +170,7 @@
         <div class="grid gap-6 sm:grid-cols-2">
                     <!-- product - start -->
                     <a href="" class="group relative flex h-80 items-end overflow-hidden rounded-[24px] bg-gray-100 p-4 shadow-lg">
-                      <img src="https://i.imgur.com/7A3gKwg.gif" loading="lazy" alt="ReNew June 4 REVEAL" class="absolute inset-0 h-full w-full object-cover object-center transition duration-200 group-hover:scale-110" />
+                      <img src="https://i.imgur.com/yaZK4eB.png" loading="lazy" alt="ReNew June 4 REVEAL" class="absolute inset-0 h-full w-full object-cover object-center transition duration-200 group-hover:scale-110" />
           
                       <div class="pointer-events-none absolute inset-0 bg-gradient-to-t from-gray-800 via-transparent to-transparent opacity-50"></div>
           
