--- a/404.html
+++ b/404.html
@@ -6,6 +6,11 @@
     <title>doReNew - 404</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
+      @font-face {
+  font-family: "San Francisco";
+  font-weight: 400;
+  src: url("https://applesocial.s3.amazonaws.com/assets/styles/fonts/sanfrancisco/sanfranciscodisplay-regular-webfont.woff");
+}
         .slide-in-blurred-bottom {
         animation: slide-in-blurred-bottom 0.6s cubic-bezier(0.230, 1.000, 0.320, 1.000) both;
     }
