--- a/about.html
+++ b/about.html
@@ -3,9 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>doReNew - À propos de DRN</title>
+  <title>doReNew - About DRN</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
+    @font-face {
+  font-family: "San Francisco";
+  font-weight: 400;
+  src: url("https://applesocial.s3.amazonaws.com/assets/styles/fonts/sanfrancisco/sanfranciscodisplay-regular-webfont.woff");
+}
     .slide-in-blurred-bottom {
 	animation: slide-in-blurred-bottom 0.6s cubic-bezier(0.230, 1.000, 0.320, 1.000) both;
 }
@@ -43,18 +48,12 @@
     <div
     class="max-w-lg px-4 sm:pt-24 pt-12 sm:pb-8 mx-auto text-left md:max-w-none md:text-center"
   >
-  <div class='text-center py-4 sm:block'>
-    <button class="bg-white border border-[#E2E8F0] hover:bg-neutral-200 text-xs font-bold py-2.5 px-4 rounded-full inline-flex items-center">
-      <svg width="16px" height="16px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M7 8L3 12L7 16" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path> <path d="M17 8L21 12L17 16" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path> <path d="M14 4L9.8589 19.4548" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path> </g></svg>
-      &nbsp; &nbsp;<span>La traduction est incomplète, nous y travaillons.</span>
-    </button>
-  </div>
     <br>
 
     <h1
       class="font-extrabold leading-10 tracking-tight text-left text-[#201515] text-center sm:leading-none text-5xl sm:text-8xl"
     >
-      <span class="inline md:block">À propos de</span>
+      <span class="inline md:block">About</span>
       <span
         class="relative mt-2 bg-clip-text text-[#ff4c04] md:inline-block"
       >doReNew.</span>
@@ -77,22 +76,22 @@
                       <div class="font-medium text-[#ff4c04] mb-1 sm:mb-0">Jan 1, 2024</div>
                       <!-- Vertical line (::before) ~ Date ~ Title ~ Circle marker (::after) -->
                       <div class="flex flex-col sm:flex-row items-start mb-1 group-last:before:hidden before:absolute before:left-2 sm:before:left-0 before:h-full before:px-px before:bg-slate-300 sm:before:ml-[6.5rem] before:self-start before:-translate-x-1/2 before:translate-y-3 after:absolute after:left-2 sm:after:left-0 after:w-2 after:h-2 after:bg-[#ff4c04] after:border-4 after:box-content after:border-slate-50 after:rounded-full sm:after:ml-[6.5rem] after:-translate-x-1/2 after:translate-y-1.5">
-                          <time class="sm:absolute left-0 translate-y-0.5 inline-flex items-center justify-center text-xs font-semibold uppercase w-20 h-6 mb-3 sm:mb-0 text-emerald-600 bg-emerald-100 rounded-full">COMPLÉTÉ</time>
-                          <div class="text-xl font-bold text-slate-900">Le label ReNew a été utilisé pour la première fois</div>
+                          <time class="sm:absolute left-0 translate-y-0.5 inline-flex items-center justify-center text-xs font-semibold uppercase w-20 h-6 mb-3 sm:mb-0 text-emerald-600 bg-emerald-100 rounded-full">complete</time>
+                          <div class="text-xl font-bold text-slate-900">ReNew label is used for the first time</div>
                       </div>
                       <!-- Content -->
-                      <div class="text-slate-500">Le label ReNew a été utilisé pour la première fois lors du rebranding de la chaîne YouTube de @RedFlyHD.</div>
+                      <div class="text-slate-500">The ReNew label was first used during the rebranding of the YouTube channel @RedFlyHD.</div>
                   </div>
                   <div class="relative pl-8 sm:pl-32 py-6 group">
                     <!-- Purple label -->
-                    <div class="font-medium text-[#ff4c04] mb-1 sm:mb-0">Août 5, 2024</div>
+                    <div class="font-medium text-[#ff4c04] mb-1 sm:mb-0">Aug 5, 2024</div>
                     <!-- Vertical line (::before) ~ Date ~ Title ~ Circle marker (::after) -->
                     <div class="flex flex-col sm:flex-row items-start mb-1 group-last:before:hidden before:absolute before:left-2 sm:before:left-0 before:h-full before:px-px before:bg-slate-300 sm:before:ml-[6.5rem] before:self-start before:-translate-x-1/2 before:translate-y-3 after:absolute after:left-2 sm:after:left-0 after:w-2 after:h-2 after:bg-[#ff4c04] after:border-4 after:box-content after:border-slate-50 after:rounded-full sm:after:ml-[6.5rem] after:-translate-x-1/2 after:translate-y-1.5">
-                        <time class="sm:absolute left-0 translate-y-0.5 inline-flex items-center justify-center text-xs font-semibold uppercase w-20 h-6 mb-3 sm:mb-0 text-emerald-600 bg-emerald-100 rounded-full">COMPLÉTÉ</time>
-                        <div class="text-xl font-bold text-slate-900">doReNew est fondé</div>
+                        <time class="sm:absolute left-0 translate-y-0.5 inline-flex items-center justify-center text-xs font-semibold uppercase w-20 h-6 mb-3 sm:mb-0 text-emerald-600 bg-emerald-100 rounded-full">complete</time>
+                        <div class="text-xl font-bold text-slate-900">doReNew is born</div>
                     </div>
                     <!-- Content -->
-                    <div class="text-slate-500">doReNew a été créé à 4 heures du matin pendant des insomnies. Notre mission : rendre la tech meilleure</div>
+                    <div class="text-slate-500">doReNew was created during a sleepless night at 4 a.m. Our mission : make tech better</div>
                 </div>
                   
                   <!-- Item #2 -->
@@ -101,11 +100,11 @@
                       <div class="font-medium text-[#ff4c04] mb-1 sm:mb-0">2025 / 2026</div>
                       <!-- Vertical line (::before) ~ Date ~ Title ~ Circle marker (::after) -->
                       <div class="flex flex-col sm:flex-row items-start mb-1 group-last:before:hidden before:absolute before:left-2 sm:before:left-0 before:h-full before:px-px before:bg-slate-300 sm:before:ml-[6.5rem] before:self-start before:-translate-x-1/2 before:translate-y-3 after:absolute after:left-2 sm:after:left-0 after:w-2 after:h-2 after:bg-[#ff4c04] after:border-4 after:box-content after:border-slate-50 after:rounded-full sm:after:ml-[6.5rem] after:-translate-x-1/2 after:translate-y-1.5">
-                          <time class="sm:absolute left-0 translate-y-0.5 inline-flex items-center justify-center text-xs font-semibold uppercase w-20 h-6 mb-3 sm:mb-0 text-orange-600 bg-orange-100 rounded-full">bientôt</time>
-                          <div class="text-xl font-bold text-slate-900">Préparation du lancement de DRN Networks</div>
+                          <time class="sm:absolute left-0 translate-y-0.5 inline-flex items-center justify-center text-xs font-semibold uppercase w-20 h-6 mb-3 sm:mb-0 text-orange-600 bg-orange-100 rounded-full">unfinished</time>
+                          <div class="text-xl font-bold text-slate-900">Prepare the launch of DRN Networks</div>
                       </div>
                       <!-- Content -->
-                      <div class="text-slate-500">Réunir, par le biais de dons ainsi que des revenus de doReNew, une somme de 5 000 € pour financer DRN Networks</div>
+                      <div class="text-slate-500">Raise a total of €5,000 through a combination of donations and DRN Visuals ( ReNew) revenue</div>
                   </div>
 
                   <!-- Item #3 -->
@@ -114,7 +113,7 @@
                       <div class="font-medium text-[#ff4c04] mb-1 sm:mb-0">2025 / 2026</div>
                       <!-- Vertical line (::before) ~ Date ~ Title ~ Circle marker (::after) -->
                       <div class="flex flex-col sm:flex-row items-start mb-1 group-last:before:hidden before:absolute before:left-2 sm:before:left-0 before:h-full before:px-px before:bg-slate-300 sm:before:ml-[6.5rem] before:self-start before:-translate-x-1/2 before:translate-y-3 after:absolute after:left-2 sm:after:left-0 after:w-2 after:h-2 after:bg-[#ff4c04] after:border-4 after:box-content after:border-slate-50 after:rounded-full sm:after:ml-[6.5rem] after:-translate-x-1/2 after:translate-y-1.5">
-                        <time class="sm:absolute left-0 translate-y-0.5 inline-flex items-center justify-center text-xs font-semibold uppercase w-20 h-6 mb-3 sm:mb-0 text-orange-600 bg-orange-100 rounded-full">bientôt</time>
+                        <time class="sm:absolute left-0 translate-y-0.5 inline-flex items-center justify-center text-xs font-semibold uppercase w-20 h-6 mb-3 sm:mb-0 text-orange-600 bg-orange-100 rounded-full">unfinished</time>
                           <div class="text-xl font-bold text-slate-900">Launch of DRN Networks</div>
                       </div>
                       <!-- Content -->
@@ -127,7 +126,7 @@
                       <div class="font-medium text-[#ff4c04] mb-1 sm:mb-0">Horizon 2030</div>
                       <!-- Vertical line (::before) ~ Date ~ Title ~ Circle marker (::after) -->
                       <div class="flex flex-col sm:flex-row items-start mb-1 group-last:before:hidden before:absolute before:left-2 sm:before:left-0 before:h-full before:px-px before:bg-slate-300 sm:before:ml-[6.5rem] before:self-start before:-translate-x-1/2 before:translate-y-3 after:absolute after:left-2 sm:after:left-0 after:w-2 after:h-2 after:bg-[#ff4c04] after:border-4 after:box-content after:border-slate-50 after:rounded-full sm:after:ml-[6.5rem] after:-translate-x-1/2 after:translate-y-1.5">
-                        <time class="sm:absolute left-0 translate-y-0.5 inline-flex items-center justify-center text-xs font-semibold uppercase w-20 h-6 mb-3 sm:mb-0 text-orange-600 bg-orange-100 rounded-full">bientôt</time>
+                        <time class="sm:absolute left-0 translate-y-0.5 inline-flex items-center justify-center text-xs font-semibold uppercase w-20 h-6 mb-3 sm:mb-0 text-orange-600 bg-orange-100 rounded-full">unfinished</time>
                           <div class="text-xl font-bold text-slate-900">Launch of DRN Computers</div>
                       </div>
                       <!-- Content -->
