local image + fix

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
             <!-- image - start -->
             <div class="order-first h-48 w-full bg-gray-700 sm:order-none sm:h-auto sm:w-1/2 lg:w-3/5">
-              <img src="https://i.imgur.com/D0ThUtt.png" loading="lazy" alt="Photo by Dom Hill" class="h-full w-full object-cover object-center" />
+              <img src="source/Banner V2.png" loading="lazy" alt="Photo by Dom Hill" class="h-full w-full object-cover object-center" />
             </div>
             <!-- image - end -->
           </div>
