full french translation in about page + fix

--- a/about.html
+++ b/about.html
@@ -202,7 +202,7 @@
 
             </div>
 
-            <p class="text-gray-500">DRN Networks is another subsidiary of doReNew. Once the funds are gathered to launch this subsidiary, we will be able to offer you web and game hosting services of exceptional quality, all while maintaining the doReNew spirit: simple and effective, open, and hassle-free.</p>
+            <p class="text-gray-500">DRN Networks will allow you, once the funds are raised, to rent one or more servers. We will do our utmost to offer the best value for money across all our ranges. We are also planning a DRN Networks for PRO range, which will include dedicated servers, as well as enhanced security and reliability.</p>
           </div>
           <!-- question - end -->
 
