--- a/fr/about.html
+++ b/fr/about.html
@@ -47,13 +47,8 @@
 <body class="absolute inset-0 -z-10 h-full w-full bg-white bg-[radial-gradient(#e5e7eb_1px,transparent_1px)] [background-size:16px_16px] slide-in-blurred-bottom"></div>
   <section>
     <div
-    class="max-w-lg px-4 sm:pt-24 pt-12 sm:pb-8 mx-auto text-left md:max-w-none md:text-center"
+    class="max-w-lg px-4 sm:pt-24 pt-12 sm:pb-8 mx-auto text-left"
   >
-  <div class='text-center py-4 sm:block'>
-    <button class="bg-white border border-[#E2E8F0] hover:bg-neutral-200 text-xs font-bold py-2.5 px-4 rounded-full inline-flex items-center">
-      <svg width="16px" height="16px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M7 8L3 12L7 16" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path> <path d="M17 8L21 12L17 16" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path> <path d="M14 4L9.8589 19.4548" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path> </g></svg>
-      &nbsp; &nbsp;<span>La traduction est incomplète, nous y travaillons.</span>
-    </button>
   </div>
     <br>
 
@@ -137,7 +132,7 @@
                           <div class="text-xl font-bold text-slate-900">Lancement de DRN Computers</div>
                       </div>
                       <!-- Content -->
-                      <div class="text-slate-500"> Si les fonds générés par DRN Networks sont suffisants, nous espérons lancer notre premier produit physique à l'horizon 2030</div>
+                      <div class="text-slate-500"> Si les fonds générés par DRN Networks sont suffisants, nous espérons lancer notre premier produit physique d'ici l'horizon 2030</div>
                   </div>
 
               </div>
@@ -156,71 +151,71 @@
           <!-- question - start -->
           <div class="rounded-[24px] bg-gray-100 p-5">
             <div class="mb-4 flex items-center justify-between gap-4 border-b pb-4">
-              <h3 class="font-semibold text-[#ff4c04] sm:text-lg md:text-xl">Who founded doReNew ?</h3>
+              <h3 class="font-semibold text-[#ff4c04] sm:text-lg md:text-xl">Qui a fondé doReNew ?</h3>
 
             </div>
 
-            <p class="text-gray-500">doReNew was founded and is currently managed by Maxence, who is currently the Chief Executive Officer (CEO).</p>
+            <p class="text-gray-500">DoReNew a été fondé par Maxence, il occupe actuellement le poste de directeur général (CEO).</p>
           </div>
           <!-- question - end -->
   
           <!-- question - start -->
           <div class="rounded-[24px] bg-gray-100 p-5">
             <div class="mb-4 flex items-center justify-between gap-4 border-b pb-4">
-              <h3 class="font-semibold text-[#ff4c04] sm:text-lg md:text-xl">What is our objective ?</h3>
+              <h3 class="font-semibold text-[#ff4c04] sm:text-lg md:text-xl">Quel est notre objectif ?</h3>
   
 
             </div>
   
-            <p class="text-gray-500">Our goal is to make technology better, starting by improving things, so that one day you might hold a DRN device in your hands.Our goal is to make technology better, starting by creating software to build our own small authority, so that one day you might hold a DRN device in your hands.</p>
+            <p class="text-gray-500">Notre but est de rendre la tech plus simple et plus accessible en commençant par de petites choses, peut-être qu'un jour, vous tiendrez entre vos mains un appareil DRN.</p>
           </div>
           <!-- question - end -->
     
           <!-- question - start -->
           <div class="rounded-[24px] bg-gray-100 p-5">
             <div class="mb-4 flex items-center justify-between gap-4 border-b pb-4">
-              <h3 class="font-semibold text-[#ff4c04] sm:text-lg md:text-xl">What is ReNew ?</h3>
+              <h3 class="font-semibold text-[#ff4c04] sm:text-lg md:text-xl">Qu'est-ce que ReNew ?</h3>
   
 
             </div>
 
-            <p class="text-gray-500">ReNew is a label created and used by DRN Visuals. When this label is used, it indicates that what you are viewing is a ReDesigned content by DRN.</p>
+            <p class="text-gray-500">ReNew est un label créé et utilisé par DRN Visuals. Lorsque ce label est utilisé, cela signifie que "l'objet" a été redesigné par nos équipes.</p>
           </div>
           <!-- question - end -->
 
           <!-- question - start -->
           <div class="rounded-[24px] bg-gray-100 p-5">
             <div class="mb-4 flex items-center justify-between gap-4 border-b pb-4">
-              <h3 class="font-semibold text-[#ff4c04] sm:text-lg md:text-xl">What is DRN Visuals ?</h3>
+              <h3 class="font-semibold text-[#ff4c04] sm:text-lg md:text-xl">Qu'est-ce que DRN Visuals ?</h3>
 
 
             </div>
 
-            <p class="text-gray-500">DRN Visuals is part of the DNA of doReNew. This subsidiary offers to create a redesign of anything you want, including branding, logos, stream overlays, or even a promotional animation for your next project !</p>
+            <p class="text-gray-500">DRN Visuals fait partie de l'ADN de DoReNew. Cette filiale crée des redesigns numériques pour à peu près tout et n'importe quoi, en passant par une image de marque complète, des logos, des overlays de stream, ou des vidéos promotionnelles pour votre nouveau projet.</p>
           </div>
           <!-- question - end -->
 
           <!-- question - start -->
           <div class="rounded-[24px] bg-gray-100 p-5">
             <div class="mb-4 flex items-center justify-between gap-4 border-b pb-4">
-              <h3 class="font-semibold text-[#ff4c04] sm:text-lg md:text-xl">What is DRN Networks ?</h3>
+              <h3 class="font-semibold text-[#ff4c04] sm:text-lg md:text-xl">Qu'est-ce que DRN Networks ?</h3>
 
 
             </div>
 
-            <p class="text-gray-500">DRN Networks is another subsidiary of doReNew. Once the funds are gathered to launch this subsidiary, we will be able to offer you web and game hosting services of exceptional quality, all while maintaining the doReNew spirit: simple and effective, open, and hassle-free.</p>
+            <p class="text-gray-500">DRN Networks vous permettra, une fois les fonds réunis, de louer un ou plusieurs serveurs. Nous ferons le maximum pour offrir le meilleur rapport qualité-prix sur toutes nos gammes. Nous envisageons aussi une gamme <br>DRN Networks for PRO incluant des serveurs dédiés, ainsi qu'une sécurité et une fiabilité renforcées.</p>
           </div>
           <!-- question - end -->
 
           <!-- question - start -->
           <div class="rounded-[24px] bg-gray-100 p-5">
             <div class="mb-4 flex items-center justify-between gap-4 border-b pb-4">
-              <h3 class="font-semibold text-[#ff4c04] sm:text-lg md:text-xl">What is DRN Computers ?</h3>
+              <h3 class="font-semibold text-[#ff4c04] sm:text-lg md:text-xl">Qu'est-ce que DRN Computers ?</h3>
 
 
             </div>
 
-            <p class="text-gray-500">DRN Computers is our ultimate project: to bring the doReNew spirit into the real world by creating peripherals that are both aesthetically pleasing, with a good quality-to-price ratio, simple, and with exceptional production quality.</p>
+            <p class="text-gray-500">DRN Computers est notre projet ultime. Nous croyons en une informatique fiable pour tous. Un design épuré à l'extérieur comme à l'intérieur sera une priorité !</p>
           </div>
           <!-- question - end -->
         </div>
@@ -240,13 +235,13 @@
     
           <!-- content - start -->
           <div class="flex w-full flex-col p-4 sm:w-1/2 sm:p-8 lg:w-3/5">
-            <h2 class="mb-4 text-xl font-bold text-[#ff4c04] md:text-2xl lg:text-4xl">We need your help !</h2>
+            <h2 class="mb-4 text-xl font-bold text-[#ff4c04] md:text-2xl lg:text-4xl">Nous avons besoin vous !</h2>
 
-            <p class="mb-8 max-w-md text-gray-600">doReNew needs your help to continue operating without ads and to launch DRN Networks and DRN Computers. We need funds, which is why we are calling on your support through donations !</p>
+            <p class="mb-8 max-w-md text-gray-600">DoReNew a besoin de votre soutien pour lancer DRN Networks et fonctionner sans publicités, tout en empêchant la vente de vos données personnelles.</p>
 
             <a href="https://ko-fi.com/dorenew">
               <div class="mt-auto">
-                <button class="group relative inline-flex h-[calc(48px+8px)] items-center justify-center rounded-full bg-neutral-950 py-1 pl-6 pr-14 font-medium text-neutral-50"><span class="z-10 pr-2">Help us !</span><div class="absolute right-1 inline-flex h-12 w-12 items-center justify-end rounded-full bg-neutral-700 transition-[width] group-hover:w-[calc(100%-8px)]"><div class="mr-3.5 flex items-center justify-center"><svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-neutral-50"><path d="M8.14645 3.14645C8.34171 2.95118 8.65829 2.95118 8.85355 3.14645L12.8536 7.14645C13.0488 7.34171 13.0488 7.65829 12.8536 7.85355L8.85355 11.8536C8.65829 12.0488 8.34171 12.0488 8.14645 11.8536C7.95118 11.6583 7.95118 11.3417 8.14645 11.1464L11.2929 8H2.5C2.22386 8 2 7.77614 2 7.5C2 7.22386 2.22386 7 2.5 7H11.2929L8.14645 3.85355C7.95118 3.65829 7.95118 3.34171 8.14645 3.14645Z" fill="currentColor" fill-rule="evenodd" clip-rule="evenodd"></path></svg></div></div></button>
+                <button class="group relative inline-flex h-[calc(48px+8px)] items-center justify-center rounded-full bg-neutral-950 py-1 pl-6 pr-14 font-medium text-neutral-50"><span class="z-10 pr-2">Aidez-nous !</span><div class="absolute right-1 inline-flex h-12 w-12 items-center justify-end rounded-full bg-neutral-700 transition-[width] group-hover:w-[calc(100%-8px)]"><div class="mr-3.5 flex items-center justify-center"><svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-neutral-50"><path d="M8.14645 3.14645C8.34171 2.95118 8.65829 2.95118 8.85355 3.14645L12.8536 7.14645C13.0488 7.34171 13.0488 7.65829 12.8536 7.85355L8.85355 11.8536C8.65829 12.0488 8.34171 12.0488 8.14645 11.8536C7.95118 11.6583 7.95118 11.3417 8.14645 11.1464L11.2929 8H2.5C2.22386 8 2 7.77614 2 7.5C2 7.22386 2.22386 7 2.5 7H11.2929L8.14645 3.85355C7.95118 3.65829 7.95118 3.34171 8.14645 3.14645Z" fill="currentColor" fill-rule="evenodd" clip-rule="evenodd"></path></svg></div></div></button>
               </div>
             </a>
           </div>
