fix french layout on title

--- a/fr/index.html
+++ b/fr/index.html
@@ -52,26 +52,23 @@
 
     <section class="sticky">
 
-      <div
-      class="max-w-lg px-4 sm:pt-24 pt-12 sm:pb-8 mx-auto text-left"
-    >
-        <div class='text-center py-4 sm:block'>
-          <button class="bg-white border border-[#E2E8F0] hover:bg-neutral-200 text-xs font-bold py-2.5 px-4 rounded-full inline-flex items-center">
-            <svg width="16px" height="16px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M7 8L3 12L7 16" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path> <path d="M17 8L21 12L17 16" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path> <path d="M14 4L9.8589 19.4548" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path> </g></svg>
-            &nbsp; &nbsp;<span>La page est actuellement en développement, certains éléments peuvent ne pas fonctionner</span>
-          </button>
-        </div>
-        <br>
-
-        <h1
-          class="font-extrabold leading-10 tracking-tight text-left text-[#201515] text-center sm:leading-none text-5xl sm:text-8xl"
-        >
-          <span class="inline md:block">Rendons la tech </span>
-          <span
-            class="relative mt-2 bg-clip-text text-[#ff4c04] md:inline-block"
-          >plus simple.</span>
-        </h1>
+      <div class='text-center py-4 sm:block'>
+        <button class="bg-white border border-[#E2E8F0] hover:bg-neutral-200 text-xs font-bold py-2.5 px-4 rounded-full inline-flex items-center">
+          <svg width="16px" height="16px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M7 8L3 12L7 16" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path> <path d="M17 8L21 12L17 16" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path> <path d="M14 4L9.8589 19.4548" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path> </g></svg>
+          &nbsp; &nbsp;<span>Page under development, some features may be missing !!!</span>
+        </button>
       </div>
+      <br>
+
+      <h1
+        class="font-extrabold leading-10 tracking-tight text-left text-[#201515] text-center sm:leading-none text-5xl sm:text-8xl"
+      >
+        <span class="inline md:block">Rendons la Tech </span>
+        <span
+          class="relative mt-2 bg-clip-text text-[#ff4c04] md:inline-block"
+        >plus simple.</span>
+      </h1>
+    </div>
       <br><br>
       <div class="py-16 sm:py-8 lg:py-12">
         <div class="mx-auto max-w-screen-xl px-4 md:px-8">
