--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <div class="flex w-full flex-col p-4 sm:w-1/2 sm:p-8 lg:w-2/5">
               <h2 class="mb-4 text-xl font-bold text-white md:text-2xl lg:text-4xl">Say Hello to<br/>doReNew</h2>
 
-              <p class="mb-10 max-w-md text-gray-400">Our goal is to improve technology by developing software and establishing our expertise, so that one day you can hold a DRN device in your hands.</p>
+              <p class="mb-10 max-w-md text-gray-400">Our goal is to improve Tech by developing software and establishing our expertise, so that one day<br>you can hold a DRN device in your hands.</p>
 
               <a href="about">
                 <div class="mt-auto">
