--- a/index.html
+++ b/index.html
@@ -110,68 +110,29 @@
 
     </section>
     <br><br><br><br>
-  <section>
-    <div class="py-16 sm:py-8 lg:py-12">
-      <div class="mx-auto max-w-screen-xl px-4 md:px-8">
-        <!-- text - start -->
-        <div class="mb-8 md:mb-12">
-          <h2 class="mb-4 text-center text-2xl font-bold text-gray-800 md:mb-6 lg:text-3xl">doReNew Statistics</h2>
-
-          <p class="mx-auto max-w-screen-md text-center text-gray-500 md:text-lg">
-            Transparency is important to us<br>all our information will be publicly available to the extent possible</p>
-        </div>
-        <!-- text - end -->
-
-        <div class="grid grid-cols-2 gap-4 md:grid-cols-4 lg:gap-8">
-          <!-- stat - start -->
-          <div class="flex flex-col items-center justify-center rounded-[24px] bg-gray-100 p-4 lg:p-8">
-            <div class="text-xl font-bold text-[#ff4c04] sm:text-2xl md:text-3xl">1</div>
-            <div class="text-sm font-semibold sm:text-base">People</div>
-          </div>
-          <!-- stat - end -->
-
-          <!-- stat - start -->
-          <div class="flex flex-col items-center justify-center rounded-[24px] bg-gray-100 p-4 md:p-8">
-            <div class="text-xl font-bold text-[#ff4c04] sm:text-2xl md:text-3xl">2</div>
-            <div class="text-sm font-semibold sm:text-base">Orders</div>
-          </div>
-
-          <!-- stat - start -->
-          <div class="flex flex-col items-center justify-center rounded-[24px] bg-gray-100 p-4 md:p-8">
-            <div class="text-xl font-bold text-[#ff4c04] sm:text-2xl md:text-3xl">-10€</div>
-            <div class="text-sm font-semibold sm:text-base">Monthly income</div>
-          </div>
-          <!-- stat - end -->
-
-          <!-- stat - start -->
-          <div class="flex flex-col items-center justify-center rounded-[24px] bg-gray-100 p-4 md:p-8">
-            <div class="text-xl font-bold text-[#ff4c04] sm:text-2xl md:text-3xl">-30€</div>
-            <div class="text-sm font-semibold sm:text-base">Income</div>
-          </div>
-          <!-- stat - end -->
-        </div>
-      </div>
-    </div>
-  </section>
-
-     <br><br><br><br>
 
   <section>
     <div class="py-6 sm:py-8 lg:py-12">
       <div class="mx-auto max-w-screen-xl px-4 md:px-8">
-        <h2 class="mb-8 text-center text-2xl font-bold text-gray-800 md:mb-12 lg:text-3xl">Collections
-          <span
-          class="inline-block whitespace-nowrap rounded bg-[#ff4c04] px-1 py-1 text-top align-top text-xs font-bold leading-none text-white"
-          >BETA</span
-        >
+        <div class="flex items-center gap-12">
+          <h2 class="text-2xl font-bold text-gray-800 lg:text-3xl">More doReNew
+            <span
+            class="inline-block whitespace-nowrap rounded bg-[#ff4c04] px-1 py-1 text-top align-top text-xs font-bold leading-none text-white"
+            >BETA</span
+          >
+          </h2>
+  
+          <p class="hidden max-w-screen-sm text-gray-500 md:block">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus repudiandae earum dicta praesentium laborum sit soluta voluptatem aperiam modi. Repellat facilis sint iure, temporibus recusandae beatae porro. Nemo, eum accusantium!</p>
+        </div>
+  
         </h2>
         
-        <br>
+        <br><br>
         <div class="grid gap-4 sm:grid-cols-2 md:gap-6 lg:grid-cols-3 xl:grid-cols-4 lg:gap-8">
           <!-- product - start -->
           <div>
             <a href="#" class="group relative flex h-96 items-end overflow-hidden rounded-[24px] bg-gray-100 p-4 shadow-lg transition ease-in-out hover:scale-110 duration-300">
-              <img src="source/Collections.webp" loading="lazy" alt="img error" class="absolute inset-0 h-full w-full object-cover object-center transition duration-200 group-hover:scale-110" />
+              <img src="source/Collections.webp" loading="lazy" alt="img error" class="absolute inset-0 h-full w-full object-cover object-center transition ease-in-out group-hover:scale-110 duration-500" />
 
               <div class="relative flex w-full flex-col rounded-[23px]  p-4 backdrop-blur-xl backdrop-brightness-50 text-center">
                 <span class="text-white">doReNew</span>
@@ -184,7 +145,7 @@
           <!-- product - start -->
           <div>
             <a href="#" class="group relative flex h-96 items-end overflow-hidden rounded-[24px] bg-gray-100 p-4 shadow-lg transition ease-in-out hover:scale-110 duration-300 ">
-              <img src="source/Collections.webp" loading="lazy" alt="img error" class="absolute inset-0 h-full w-full object-cover object-center transition duration-200 group-hover:scale-110" />
+              <img src="source/Collections.webp" loading="lazy" alt="img error" class="absolute inset-0 h-full w-full object-cover object-center transition ease-in-out group-hover:scale-110 duration-500" />
     
               <div class="relative flex w-full flex-col rounded-[23px]  p-4 backdrop-blur-xl backdrop-brightness-50 text-center">
                 <span class="text-white">doReNew</span>
@@ -197,7 +158,7 @@
           <!-- product - start -->
           <div>
             <a href="#" class="group relative flex h-96 items-end overflow-hidden rounded-[24px] bg-gray-100 p-4 shadow-lg transition ease-in-out hover:scale-110 duration-300">
-              <img src="source/Collections.webp" loading="lazy" alt="img error" class="absolute inset-0 h-full w-full object-cover object-center transition duration-200 group-hover:scale-110" />
+              <img src="source/Collections.webp" loading="lazy" alt="img error" class="absolute inset-0 h-full w-full object-cover object-center transition ease-in-out group-hover:scale-110 duration-500" />
 
               <div class="relative flex w-full flex-col rounded-[23px]  p-4 backdrop-blur-xl backdrop-brightness-50 text-center">
                 <span class="text-white">doReNew</span>
@@ -210,7 +171,7 @@
           <!-- product - start -->
           <div>
             <a href="#" class="group relative flex h-96 items-end overflow-hidden rounded-[24px] bg-gray-100 p-4 shadow-lg transition ease-in-out hover:scale-110 duration-300">
-              <img src="source/Collections.webp" loading="lazy" alt="img error" class="absolute inset-0 h-full w-full object-cover object-center transition duration-200 group-hover:scale-110" />
+              <img src="source/Collections.webp" loading="lazy" alt="img error" class="absolute inset-0 h-full w-full object-cover object-center transition ease-in-out group-hover:scale-110 duration-500" />
 
               <div class="relative flex w-full flex-col rounded-[23px]  p-4 backdrop-blur-xl backdrop-brightness-50 text-center">
                 <span class="text-white">doReNew</span>
@@ -224,8 +185,72 @@
     </div>
   </section>
 
-  <br><br><br><br>
+  <br>
+</section>
 
+
+<div class="py-6 sm:py-8 lg:py-12"></div>
+  <div class="mx-auto max-w-screen-xl px-4 md:px-8">
+    <div class="mb-4 flex items-center justify-between gap-8 sm:mb-8 md:mb-12">
+      <div class="flex items-center gap-12">
+        <h2 class="text-2xl font-bold text-gray-800 lg:text-3xl">Our Design System
+          <span
+          class="inline-block whitespace-nowrap rounded bg-[#ff4c04] px-1 py-1 text-top align-top text-xs font-bold leading-none text-white"
+          >BETA</span
+        >
+        </h2>
+
+        <p class="hidden max-w-screen-sm text-gray-500 md:block">Our design is both timeless and bold. We have strategically chosen a vibrant color palette to stand out from the designs of other brands. doReNew is not just a brand it’s a statement of ambition, energy, and positivity. We aim to inspire and captivate our audience with every interaction..</p>
+      </div>
+      <button class="group relative inline-flex h-12 items-center justify-center rounded-[23px] bg-neutral-950 px-6 font-medium text-neutral-200"><span>More</span><div class="relative ml-1 h-5 w-5 overflow-hidden"><div class="absolute transition-all duration-300 group-hover:-translate-y-5 group-hover:translate-x-4"><svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg" class="h-5 w-5"><path d="M3.64645 11.3536C3.45118 11.1583 3.45118 10.8417 3.64645 10.6465L10.2929 4L6 4C5.72386 4 5.5 3.77614 5.5 3.5C5.5 3.22386 5.72386 3 6 3L11.5 3C11.6326 3 11.7598 3.05268 11.8536 3.14645C11.9473 3.24022 12 3.36739 12 3.5L12 9.00001C12 9.27615 11.7761 9.50001 11.5 9.50001C11.2239 9.50001 11 9.27615 11 9.00001V4.70711L4.35355 11.3536C4.15829 11.5488 3.84171 11.5488 3.64645 11.3536Z" fill="currentColor" fill-rule="evenodd" clip-rule="evenodd"></path></svg><svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 -translate-x-4"><path d="M3.64645 11.3536C3.45118 11.1583 3.45118 10.8417 3.64645 10.6465L10.2929 4L6 4C5.72386 4 5.5 3.77614 5.5 3.5C5.5 3.22386 5.72386 3 6 3L11.5 3C11.6326 3 11.7598 3.05268 11.8536 3.14645C11.9473 3.24022 12 3.36739 12 3.5L12 9.00001C12 9.27615 11.7761 9.50001 11.5 9.50001C11.2239 9.50001 11 9.27615 11 9.00001V4.70711L4.35355 11.3536C4.15829 11.5488 3.84171 11.5488 3.64645 11.3536Z" fill="currentColor" fill-rule="evenodd" clip-rule="evenodd"></path></svg></div></div></button>
+    </div>
+
+    <div class="grid grid-cols-2 gap-4 sm:grid-cols-3 md:gap-6 xl:gap-8">
+      <!-- image - start -->
+      <a href="#" class="group relative flex h-48 items-end overflow-hidden rounded-[23px] bg-gray-100 shadow-lg md:h-80">
+        <img src="source/DALLE-design-wait.webp" loading="lazy" alt="Photo by Minh Pham" class="absolute inset-0 h-full w-full object-cover object-center transition duration-500 group-hover:scale-110" />
+
+        <div class="pointer-events-none absolute inset-0 bg-gradient-to-t from-gray-800 via-transparent to-transparent opacity-50"></div>
+
+        <span class="relative ml-4 mb-3 inline-block text-sm text-white md:ml-5 md:text-lg">work in progess...</span>
+      </a>
+      <!-- image - end -->
+
+      <!-- image - start -->
+      <a href="#" class="group relative flex h-48 items-end overflow-hidden rounded-[23px] bg-gray-100 shadow-lg md:col-span-2 md:h-80">
+        <img src="source/DALLE-design-wait-2.webp" loading="lazy" alt="Photo by Magicle" class="absolute inset-0 h-full w-full object-cover object-center transition duration-500 group-hover:scale-110" />
+
+        <div class="pointer-events-none absolute inset-0 bg-gradient-to-t from-gray-800 via-transparent to-transparent opacity-50"></div>
+
+        <span class="relative ml-4 mb-3 inline-block text-sm text-white md:ml-5 md:text-lg">work in progess...</span>
+      </a>
+      <!-- image - end -->
+
+      <!-- image - start -->
+      <a href="#" class="group relative flex h-48 items-end overflow-hidden rounded-[23px] bg-gray-100 shadow-lg md:col-span-2 md:h-80">
+        <img src="source/DALLE-design-wait-3.webp" loading="lazy" alt="Photo by Martin Sanchez" class="absolute inset-0 h-full w-full object-cover object-center transition duration-500 group-hover:scale-110" />
+
+        <div class="pointer-events-none absolute inset-0 bg-gradient-to-t from-gray-800 via-transparent to-transparent opacity-50"></div>
+
+        <span class="relative ml-4 mb-3 inline-block text-sm text-white md:ml-5 md:text-lg">work in progess...</span>
+      </a>
+      <!-- image - end -->
+
+      <!-- image - start -->
+      <a href="#" class="group relative flex h-48 items-end overflow-hidden rounded-[23px] bg-gray-100 shadow-lg md:h-80">
+        <img src="source/DALLE-design-wait.webp" loading="lazy" alt="Photo by Lorenzo Herrera" class="absolute inset-0 h-full w-full object-cover object-center transition duration-500 group-hover:scale-110" />
+
+        <div class="pointer-events-none absolute inset-0 bg-gradient-to-t from-gray-800 via-transparent to-transparent opacity-50"></div>
+
+        <span class="relative ml-4 mb-3 inline-block text-sm text-white md:ml-5 md:text-lg">work in progess...</span>
+      </a>
+      <!-- image - end -->
+    </div>
+  </div>
+</div>
+
+</section>
+<br><br><br><br>
   <footer>
     <div class="bg-gray-900">
       <footer class="mx-auto max-w-screen-2xl px-4 md:px-8">
@@ -276,7 +301,9 @@
               <div>
                 <a href="#" class="text-gray-400 transition duration-100 hover:text-white active:text-indigo-600">DRN Visuals</a>
               </div>
-
+              <div>
+                <a href="#" class="text-gray-400 transition duration-100 hover:text-white active:text-indigo-600">DRN Games Studio</a>
+              </div>
               <div>
                 <a href="#" class="text-gray-400 transition duration-100 hover:text-white active:text-indigo-600">DRN Networks</a>
               </div>
