fix french layout

--- a/fr/index.html
+++ b/fr/index.html
@@ -50,7 +50,7 @@
 
   <section>
 
-    <section class="sticky">
+    <section class="sticky mt-32">
       <h1
         class="font-extrabold leading-10 tracking-tight text-left text-[#201515] text-center sm:leading-none text-5xl sm:text-8xl"
       >
