--- a/lang.html
+++ b/lang.html
@@ -54,7 +54,7 @@
     <div class="list-wrap">
     <ul class="list" data-search-on-list="list">
       <li class="list-item" data-search-on-list="list-item">
-        <a href="index.html" class="list-item-link">English<span class="item-list-subtext">US</span></a>
+        <a href="index.html" class="list-item-link">English<span class="item-list-subtext">World</span></a>
       </li>
       <li class="list-item" data-search-on-list="list-item">
         <a href="fr" class="list-item-link">Français<span class="item-list-subtext">France</span></a>
