--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
             <!-- image - start -->
             <div class="order-first h-48 w-full bg-gray-700 sm:order-none sm:h-auto sm:w-1/2 lg:w-3/5">
-              <img src="source/Banner V2.png" loading="lazy" alt="Photo by Dom Hill" class="h-full w-full object-cover object-center" />
+              <img src="https://raw.githubusercontent.com/doReNew/doReNew-WEB-RESSOURCES/main/img/png/Banner%20V2.png" loading="lazy" alt="Photo by Dom Hill" class="h-full w-full object-cover object-center" />
             </div>
             <!-- image - end -->
           </div>
@@ -132,7 +132,7 @@
           <!-- product - start -->
           <div>
             <a href="#" class="group relative flex h-96 items-end overflow-hidden rounded-[24px] bg-gray-100 p-4 shadow-lg transition ease-in-out hover:scale-110 duration-300">
-              <img src="source/Collections.webp" loading="lazy" alt="img error" class="absolute inset-0 h-full w-full object-cover object-center transition ease-in-out group-hover:scale-110 duration-500" />
+              <img src="https://raw.githubusercontent.com/doReNew/doReNew-WEB-RESSOURCES/main/img/webp/Collections.webp" loading="lazy" alt="img error" class="absolute inset-0 h-full w-full object-cover object-center transition ease-in-out group-hover:scale-110 duration-500" />
 
               <div class="relative flex w-full flex-col rounded-[23px]  p-4 backdrop-blur-xl backdrop-brightness-50 text-center">
                 <span class="text-white">doReNew</span>
@@ -145,7 +145,7 @@
           <!-- product - start -->
           <div>
             <a href="#" class="group relative flex h-96 items-end overflow-hidden rounded-[24px] bg-gray-100 p-4 shadow-lg transition ease-in-out hover:scale-110 duration-300 ">
-              <img src="source/Collections.webp" loading="lazy" alt="img error" class="absolute inset-0 h-full w-full object-cover object-center transition ease-in-out group-hover:scale-110 duration-500" />
+              <img src="https://raw.githubusercontent.com/doReNew/doReNew-WEB-RESSOURCES/main/img/webp/Collections.webp" loading="lazy" alt="img error" class="absolute inset-0 h-full w-full object-cover object-center transition ease-in-out group-hover:scale-110 duration-500" />
     
               <div class="relative flex w-full flex-col rounded-[23px]  p-4 backdrop-blur-xl backdrop-brightness-50 text-center">
                 <span class="text-white">doReNew</span>
@@ -158,7 +158,7 @@
           <!-- product - start -->
           <div>
             <a href="#" class="group relative flex h-96 items-end overflow-hidden rounded-[24px] bg-gray-100 p-4 shadow-lg transition ease-in-out hover:scale-110 duration-300">
-              <img src="source/Collections.webp" loading="lazy" alt="img error" class="absolute inset-0 h-full w-full object-cover object-center transition ease-in-out group-hover:scale-110 duration-500" />
+              <img src="https://raw.githubusercontent.com/doReNew/doReNew-WEB-RESSOURCES/main/img/webp/Collections.webp" loading="lazy" alt="img error" class="absolute inset-0 h-full w-full object-cover object-center transition ease-in-out group-hover:scale-110 duration-500" />
 
               <div class="relative flex w-full flex-col rounded-[23px]  p-4 backdrop-blur-xl backdrop-brightness-50 text-center">
                 <span class="text-white">doReNew</span>
@@ -171,7 +171,7 @@
           <!-- product - start -->
           <div>
             <a href="#" class="group relative flex h-96 items-end overflow-hidden rounded-[24px] bg-gray-100 p-4 shadow-lg transition ease-in-out hover:scale-110 duration-300">
-              <img src="source/Collections.webp" loading="lazy" alt="img error" class="absolute inset-0 h-full w-full object-cover object-center transition ease-in-out group-hover:scale-110 duration-500" />
+              <img src="https://raw.githubusercontent.com/doReNew/doReNew-WEB-RESSOURCES/main/img/webp/Collections.webp" loading="lazy" alt="img error" class="absolute inset-0 h-full w-full object-cover object-center transition ease-in-out group-hover:scale-110 duration-500" />
 
               <div class="relative flex w-full flex-col rounded-[23px]  p-4 backdrop-blur-xl backdrop-brightness-50 text-center">
                 <span class="text-white">doReNew</span>
@@ -208,7 +208,7 @@
     <div class="grid grid-cols-2 gap-4 sm:grid-cols-3 md:gap-6 xl:gap-8">
       <!-- image - start -->
       <a href="#" class="group relative flex h-48 items-end overflow-hidden rounded-[23px] bg-gray-100 shadow-lg md:h-80">
-        <img src="source/DALLE-design-wait.webp" loading="lazy" alt="Photo by Minh Pham" class="absolute inset-0 h-full w-full object-cover object-center transition duration-500 group-hover:scale-110" />
+        <img src="https://raw.githubusercontent.com/doReNew/doReNew-WEB-RESSOURCES/main/img/webp/DALLE-design-wait.webp" loading="lazy" alt="Photo by Minh Pham" class="absolute inset-0 h-full w-full object-cover object-center transition duration-500 group-hover:scale-110" />
 
         <div class="pointer-events-none absolute inset-0 bg-gradient-to-t from-gray-800 via-transparent to-transparent opacity-50"></div>
 
@@ -218,7 +218,7 @@
 
       <!-- image - start -->
       <a href="#" class="group relative flex h-48 items-end overflow-hidden rounded-[23px] bg-gray-100 shadow-lg md:col-span-2 md:h-80">
-        <img src="source/DALLE-design-wait-2.webp" loading="lazy" alt="Photo by Magicle" class="absolute inset-0 h-full w-full object-cover object-center transition duration-500 group-hover:scale-110" />
+        <img src="https://raw.githubusercontent.com/doReNew/doReNew-WEB-RESSOURCES/main/img/webp/DALLE-design-wait-2.webp" loading="lazy" alt="Photo by Magicle" class="absolute inset-0 h-full w-full object-cover object-center transition duration-500 group-hover:scale-110" />
 
         <div class="pointer-events-none absolute inset-0 bg-gradient-to-t from-gray-800 via-transparent to-transparent opacity-50"></div>
 
@@ -228,7 +228,7 @@
 
       <!-- image - start -->
       <a href="#" class="group relative flex h-48 items-end overflow-hidden rounded-[23px] bg-gray-100 shadow-lg md:col-span-2 md:h-80">
-        <img src="source/DALLE-design-wait-3.webp" loading="lazy" alt="Photo by Martin Sanchez" class="absolute inset-0 h-full w-full object-cover object-center transition duration-500 group-hover:scale-110" />
+        <img src="https://raw.githubusercontent.com/doReNew/doReNew-WEB-RESSOURCES/main/img/webp/DALLE-design-wait-3.webp" loading="lazy" alt="Photo by Martin Sanchez" class="absolute inset-0 h-full w-full object-cover object-center transition duration-500 group-hover:scale-110" />
 
         <div class="pointer-events-none absolute inset-0 bg-gradient-to-t from-gray-800 via-transparent to-transparent opacity-50"></div>
 
@@ -238,7 +238,7 @@
 
       <!-- image - start -->
       <a href="#" class="group relative flex h-48 items-end overflow-hidden rounded-[23px] bg-gray-100 shadow-lg md:h-80">
-        <img src="source/DALLE-design-wait.webp" loading="lazy" alt="Photo by Lorenzo Herrera" class="absolute inset-0 h-full w-full object-cover object-center transition duration-500 group-hover:scale-110" />
+        <img src="https://raw.githubusercontent.com/doReNew/doReNew-WEB-RESSOURCES/main/img/webp/DALLE-design-wait.webp" loading="lazy" alt="Photo by Lorenzo Herrera" class="absolute inset-0 h-full w-full object-cover object-center transition duration-500 group-hover:scale-110" />
 
         <div class="pointer-events-none absolute inset-0 bg-gradient-to-t from-gray-800 via-transparent to-transparent opacity-50"></div>
 
