resync img to webp

--- a/fr/index.html
+++ b/fr/index.html
@@ -79,7 +79,7 @@
 
             <!-- image - start -->
             <div class="order-first h-48 w-full bg-gray-700 sm:order-none sm:h-auto sm:w-1/2 lg:w-3/5">
-              <img src="https://raw.githubusercontent.com/doReNew/doReNew-WEB-RESSOURCES/main/img/png/Banner%20V2.png" loading="lazy" alt="doReNew banner" class="h-full w-full object-cover object-center" />
+              <img src="https://github.com/doReNew/doReNew-WEB-RESSOURCES/raw/main/img/webp/Banner-V2.webp" loading="lazy" alt="doReNew banner" class="h-full w-full object-cover object-center" />
             </div>
             <!-- image - end -->
           </div>
