--- a/fr/index.html
+++ b/fr/index.html
@@ -4,7 +4,7 @@
   <link rel="icon" type="image/x-icon" href="../favicon.ico">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>doReNew</title>
+  <title>doReNew (France)</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     @font-face {
