--- a/fr/index.html
+++ b/fr/index.html
@@ -185,7 +185,7 @@
       <div class="grid grid-cols-2 gap-4 sm:grid-cols-3 md:gap-6 xl:gap-8">
         <!-- image - start -->
         <a href="#" class="group relative flex h-48 items-end overflow-hidden rounded-[23px] bg-gray-100 shadow-lg md:h-80">
-          <img src="https://raw.githubusercontent.com/doReNew/doReNew-WEB-RESSOURCES/main/img/webp/DALLE-design-wait.webp" loading="lazy" alt="Photo by Dall.E" class="absolute inset-0 h-full w-full object-cover object-center transition duration-500 group-hover:scale-110" />
+          <img src="https://github.com/doReNew/doReNew-WEB-RESSOURCES/raw/main/img/webp/Banner-V2.webp" loading="lazy" alt="Photo by Dall.E" class="absolute inset-0 h-full w-full object-cover object-center transition duration-500 group-hover:scale-110" />
   
           <div class="pointer-events-none absolute inset-0 bg-gradient-to-t from-gray-800 via-transparent to-transparent opacity-50"></div>
   
@@ -195,7 +195,7 @@
   
         <!-- image - start -->
         <a href="#" class="group relative flex h-48 items-end overflow-hidden rounded-[23px] bg-gray-100 shadow-lg md:col-span-2 md:h-80">
-          <img src="https://raw.githubusercontent.com/doReNew/doReNew-WEB-RESSOURCES/main/img/webp/DALLE-design-wait-2.webp" loading="lazy" alt="Photo by Dall.E" class="absolute inset-0 h-full w-full object-cover object-center transition duration-500 group-hover:scale-110" />
+          <img src="https://github.com/doReNew/doReNew-WEB-RESSOURCES/raw/main/img/webp/Banner-V2.webp" loading="lazy" alt="Photo by Dall.E" class="absolute inset-0 h-full w-full object-cover object-center transition duration-500 group-hover:scale-110" />
   
           <div class="pointer-events-none absolute inset-0 bg-gradient-to-t from-gray-800 via-transparent to-transparent opacity-50"></div>
   
@@ -205,7 +205,7 @@
   
         <!-- image - start -->
         <a href="#" class="group relative flex h-48 items-end overflow-hidden rounded-[23px] bg-gray-100 shadow-lg md:col-span-2 md:h-80">
-          <img src="https://raw.githubusercontent.com/doReNew/doReNew-WEB-RESSOURCES/main/img/webp/DALLE-design-wait-3.webp" loading="lazy" alt="Photo by Dall.E" class="absolute inset-0 h-full w-full object-cover object-center transition duration-500 group-hover:scale-110" />
+          <img src="https://github.com/doReNew/doReNew-WEB-RESSOURCES/raw/main/img/webp/Banner-V2.webp" loading="lazy" alt="Photo by Dall.E" class="absolute inset-0 h-full w-full object-cover object-center transition duration-500 group-hover:scale-110" />
   
           <div class="pointer-events-none absolute inset-0 bg-gradient-to-t from-gray-800 via-transparent to-transparent opacity-50"></div>
   
@@ -215,7 +215,7 @@
   
         <!-- image - start -->
         <a href="#" class="group relative flex h-48 items-end overflow-hidden rounded-[23px] bg-gray-100 shadow-lg md:h-80">
-          <img src="https://raw.githubusercontent.com/doReNew/doReNew-WEB-RESSOURCES/main/img/webp/DALLE-design-wait.webp" loading="lazy" alt="Photo by Dall.E" class="absolute inset-0 h-full w-full object-cover object-center transition duration-500 group-hover:scale-110" />
+          <img src="https://github.com/doReNew/doReNew-WEB-RESSOURCES/raw/main/img/webp/Banner-V2.webp" loading="lazy" alt="Photo by Dall.E" class="absolute inset-0 h-full w-full object-cover object-center transition duration-500 group-hover:scale-110" />
   
           <div class="pointer-events-none absolute inset-0 bg-gradient-to-t from-gray-800 via-transparent to-transparent opacity-50"></div>
   
