updated img sources

--- a/fr/index.html
+++ b/fr/index.html
@@ -79,7 +79,7 @@
 
             <!-- image - start -->
             <div class="order-first h-48 w-full bg-gray-700 sm:order-none sm:h-auto sm:w-1/2 lg:w-3/5">
-              <img src="https://github.com/doReNew/doReNew-WEB-RESSOURCES/raw/main/img/webp/Banner-V2.webp" loading="lazy" alt="doReNew banner" class="h-full w-full object-cover object-center" />
+              <img src="https://raw.githubusercontent.com/doReNew/doReNew-WEB-RESSOURCES/main/img/gif/Banner-V3.gif" loading="lazy" alt="doReNew banner" class="h-full w-full object-cover object-center" />
             </div>
             <!-- image - end -->
           </div>
@@ -149,7 +149,7 @@
             <div>
               <a href="#" class="group relative flex h-96 items-end overflow-hidden rounded-[24px] bg-gray-100 p-4 shadow-lg transition ease-in-out hover:scale-110 duration-300">
                 <img src="https://raw.githubusercontent.com/doReNew/doReNew-WEB-RESSOURCES/main/img/webp/Collections.webp" loading="lazy" alt="img error" class="absolute inset-0 h-full w-full object-cover object-center transition ease-in-out group-hover:scale-110 duration-500" />
-  
+
                 <div class="relative flex w-full flex-col rounded-[23px]  p-4 backdrop-blur-xl backdrop-brightness-50 text-center">
                   <span class="text-white">doReNew</span>
                   <span class="text-lg font-bold text-white lg:text-xl">Computers</span>
@@ -185,7 +185,7 @@
       <div class="grid grid-cols-2 gap-4 sm:grid-cols-3 md:gap-6 xl:gap-8">
         <!-- image - start -->
         <a href="#" class="group relative flex h-48 items-end overflow-hidden rounded-[23px] bg-gray-100 shadow-lg md:h-80">
-          <img src="https://github.com/doReNew/doReNew-WEB-RESSOURCES/raw/main/img/webp/Banner-V2.webp" loading="lazy" alt="Photo by Dall.E" class="absolute inset-0 h-full w-full object-cover object-center transition duration-500 group-hover:scale-110" />
+          <img src="https://raw.githubusercontent.com/doReNew/doReNew-WEB-RESSOURCES/main/img/webp/Banner-main.webp" loading="lazy" alt="Photo by Dall.E" class="absolute inset-0 h-full w-full object-cover object-center transition duration-500 group-hover:scale-110" />
   
           <div class="pointer-events-none absolute inset-0 bg-gradient-to-t from-gray-800 via-transparent to-transparent opacity-50"></div>
   
@@ -195,7 +195,7 @@
   
         <!-- image - start -->
         <a href="#" class="group relative flex h-48 items-end overflow-hidden rounded-[23px] bg-gray-100 shadow-lg md:col-span-2 md:h-80">
-          <img src="https://github.com/doReNew/doReNew-WEB-RESSOURCES/raw/main/img/webp/Banner-V2.webp" loading="lazy" alt="Photo by Dall.E" class="absolute inset-0 h-full w-full object-cover object-center transition duration-500 group-hover:scale-110" />
+          <img src="https://raw.githubusercontent.com/doReNew/doReNew-WEB-RESSOURCES/main/img/webp/Banner-main.webp" loading="lazy" alt="Photo by Dall.E" class="absolute inset-0 h-full w-full object-cover object-center transition duration-500 group-hover:scale-110" />
   
           <div class="pointer-events-none absolute inset-0 bg-gradient-to-t from-gray-800 via-transparent to-transparent opacity-50"></div>
   
@@ -205,7 +205,7 @@
   
         <!-- image - start -->
         <a href="#" class="group relative flex h-48 items-end overflow-hidden rounded-[23px] bg-gray-100 shadow-lg md:col-span-2 md:h-80">
-          <img src="https://github.com/doReNew/doReNew-WEB-RESSOURCES/raw/main/img/webp/Banner-V2.webp" loading="lazy" alt="Photo by Dall.E" class="absolute inset-0 h-full w-full object-cover object-center transition duration-500 group-hover:scale-110" />
+          <img src="https://raw.githubusercontent.com/doReNew/doReNew-WEB-RESSOURCES/main/img/webp/Banner-main.webp" loading="lazy" alt="Photo by Dall.E" class="absolute inset-0 h-full w-full object-cover object-center transition duration-500 group-hover:scale-110" />
   
           <div class="pointer-events-none absolute inset-0 bg-gradient-to-t from-gray-800 via-transparent to-transparent opacity-50"></div>
   
@@ -215,7 +215,7 @@
   
         <!-- image - start -->
         <a href="#" class="group relative flex h-48 items-end overflow-hidden rounded-[23px] bg-gray-100 shadow-lg md:h-80">
-          <img src="https://github.com/doReNew/doReNew-WEB-RESSOURCES/raw/main/img/webp/Banner-V2.webp" loading="lazy" alt="Photo by Dall.E" class="absolute inset-0 h-full w-full object-cover object-center transition duration-500 group-hover:scale-110" />
+          <img src="https://raw.githubusercontent.com/doReNew/doReNew-WEB-RESSOURCES/main/img/webp/Banner-main.webp" loading="lazy" alt="Photo by Dall.E" class="absolute inset-0 h-full w-full object-cover object-center transition duration-500 group-hover:scale-110" />
   
           <div class="pointer-events-none absolute inset-0 bg-gradient-to-t from-gray-800 via-transparent to-transparent opacity-50"></div>
   
