--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
             <!-- image - start -->
             <div class="order-first h-48 w-full bg-gray-700 sm:order-none sm:h-auto sm:w-1/2 lg:w-3/5">
-              <img src="https://github.com/doReNew/doReNew-WEB-RESSOURCES/raw/main/img/webp/Banner-V2.webp" loading="lazy" alt="doReNew banner" class="h-full w-full object-cover object-center" />
+              <img src="https://raw.githubusercontent.com/doReNew/doReNew-WEB-RESSOURCES/main/img/gif/Banner-V3.gif" loading="lazy" alt="doReNew banner" class="h-full w-full object-cover object-center" />
             </div>
             <!-- image - end -->
           </div>
@@ -208,7 +208,7 @@
     <div class="grid grid-cols-2 gap-4 sm:grid-cols-3 md:gap-6 xl:gap-8">
       <!-- image - start -->
       <a href="#" class="group relative flex h-48 items-end overflow-hidden rounded-[23px] bg-gray-100 shadow-lg md:h-80">
-        <img src="https://github.com/doReNew/doReNew-WEB-RESSOURCES/raw/main/img/webp/Banner-V2.webp" loading="lazy" alt="Photo by Dall.E" class="absolute inset-0 h-full w-full object-cover object-center transition duration-500 group-hover:scale-110" />
+        <img src="https://raw.githubusercontent.com/doReNew/doReNew-WEB-RESSOURCES/main/img/webp/Banner-main-V2.webp" loading="lazy" alt="Photo by Dall.E" class="absolute inset-0 h-full w-full object-cover object-center transition duration-500 group-hover:scale-110" />
 
         <div class="pointer-events-none absolute inset-0 bg-gradient-to-t from-gray-800 via-transparent to-transparent opacity-50"></div>
 
@@ -218,7 +218,7 @@
 
       <!-- image - start -->
       <a href="#" class="group relative flex h-48 items-end overflow-hidden rounded-[23px] bg-gray-100 shadow-lg md:col-span-2 md:h-80">
-        <img src="https://github.com/doReNew/doReNew-WEB-RESSOURCES/raw/main/img/webp/Banner-V2.webp" loading="lazy" alt="Photo by Dall.E" class="absolute inset-0 h-full w-full object-cover object-center transition duration-500 group-hover:scale-110" />
+        <img src="https://raw.githubusercontent.com/doReNew/doReNew-WEB-RESSOURCES/main/img/webp/Banner-main-V2.webp" loading="lazy" alt="Photo by Dall.E" class="absolute inset-0 h-full w-full object-cover object-center transition duration-500 group-hover:scale-110" />
 
         <div class="pointer-events-none absolute inset-0 bg-gradient-to-t from-gray-800 via-transparent to-transparent opacity-50"></div>
 
@@ -228,7 +228,7 @@
 
       <!-- image - start -->
       <a href="#" class="group relative flex h-48 items-end overflow-hidden rounded-[23px] bg-gray-100 shadow-lg md:col-span-2 md:h-80">
-        <img src="https://github.com/doReNew/doReNew-WEB-RESSOURCES/raw/main/img/webp/Banner-V2.webp" loading="lazy" alt="Photo by Dall.E" class="absolute inset-0 h-full w-full object-cover object-center transition duration-500 group-hover:scale-110" />
+        <img src="https://raw.githubusercontent.com/doReNew/doReNew-WEB-RESSOURCES/main/img/webp/Banner-main-V2.webp" loading="lazy" alt="Photo by Dall.E" class="absolute inset-0 h-full w-full object-cover object-center transition duration-500 group-hover:scale-110" />
 
         <div class="pointer-events-none absolute inset-0 bg-gradient-to-t from-gray-800 via-transparent to-transparent opacity-50"></div>
 
@@ -238,7 +238,7 @@
 
       <!-- image - start -->
       <a href="#" class="group relative flex h-48 items-end overflow-hidden rounded-[23px] bg-gray-100 shadow-lg md:h-80">
-        <img src="https://github.com/doReNew/doReNew-WEB-RESSOURCES/raw/main/img/webp/Banner-V2.webp" loading="lazy" alt="Photo by Dall.E" class="absolute inset-0 h-full w-full object-cover object-center transition duration-500 group-hover:scale-110" />
+        <img src="https://raw.githubusercontent.com/doReNew/doReNew-WEB-RESSOURCES/main/img/webp/Banner-main-V2.webp" loading="lazy" alt="Photo by Dall.E" class="absolute inset-0 h-full w-full object-cover object-center transition duration-500 group-hover:scale-110" />
 
         <div class="pointer-events-none absolute inset-0 bg-gradient-to-t from-gray-800 via-transparent to-transparent opacity-50"></div>
 
