better google indexation

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>doReNew</title>
+  <meta name="description" content="Our goal is to improve Tech by developing software and establishing our expertise, so that one day you can hold a DRN device in your hands.">
+  <meta name="keywords" content="Technologie, Dorenew Tech, dorenew, drn, doronew, futur, next, dev, developing, colors, design, motion design, advenced, techno, ReNew, ronewn renew, re new">
+  <meta name="author" content="doReNew">
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     @font-face {
