fix banner about

--- a/about.html
+++ b/about.html
@@ -228,7 +228,7 @@
         <div class="flex flex-col overflow-hidden rounded-[24px] bg-gray-200 sm:flex-row md:h-80">
           <!-- image - start -->
           <div class="order-first h-48 w-full bg-gray-300 sm:order-none sm:h-auto sm:w-1/2 lg:w-2/5">
-            <img src="https://github.com/doReNew/doReNew-WEB-RESSOURCES/raw/main/img/webp/Banner-V2.webp" loading="lazy" alt="Photo by Andras Vas" class="h-full w-full object-cover object-center" />
+            <img src="https://raw.githubusercontent.com/doReNew/doReNew-WEB-RESSOURCES/main/img/gif/Banner-V3.gif" loading="lazy" alt="doReNew Banner" class="h-full w-full object-cover object-center" />
           </div>
           <!-- image - end -->
     
