--- a/fr/index.html
+++ b/fr/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>doReNew (France)</title>
   <meta name="description" content="Notre objectif est d'améliorer la Tech en développant des logiciels et en affirmant notre expertise, afin qu'un jour vous puissiez tenir un appareil DRN en main.">
-  <meta name="keywords" content="Technologie, Dorenew Tech, dorenew, drn, doronew, futur, next, dev, developing, colors, design, motion design, advenced, techno, ReNew, ronewn renew, re new, fr, france, françe, french, europe, france globale">
+  <meta name="keywords" content="Technologie, Dorenew Tech, dorenew, drn, doronew, futur, next, dev, developing, colors, design, motion design, advenced, techno, ReNew, ronewn renew, re new, fr, france, françe, french, europe, france globale,  dorenewtech, dorenewtech, dorenewte, dorenewtec, dorenwtech">
   <meta name="author" content="doReNew (France)">
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
